# wsio

./: .release-plz.toml  Cargo.toml  README.md  fetch-and-merge.sh  run-client-examples.sh  run-server-examples.sh
crates/: Cargo.example.toml
crates/rtio-server/: Cargo.toml
crates/rtio-server/src/: builder.rs  config.rs  inner.rs  layer.rs  lib.rs  namespace.rs  runtime.rs  service.rs
crates/rtio-server/src/packet/codecs/: serde_json.rs
crates/rtio-server/src/service/: mod.rs  request.rs
crates/wsio-client/: CHANGELOG.md  Cargo.toml  README.md
crates/wsio-client/examples/: connection_stress.rs  main.rs
crates/wsio-client/src/: builder.rs  config.rs  connection.rs  lib.rs  runtime.rs  session.rs
crates/wsio-core/: CHANGELOG.md  Cargo.toml  README.md
crates/wsio-core/src/: lib.rs
crates/wsio-core/src/atomic/: status.rs
crates/wsio-core/src/connection/: core.rs
crates/wsio-core/src/event/: registry.rs
crates/wsio-core/src/packet/: mod.rs
crates/wsio-core/src/packet/codecs/: bincode.rs  cbor.rs  mod.rs  msgpack.rs  postcard.rs  serde_json.rs  sonic_rs.rs
crates/wsio-core/src/traits/task/: spawner.rs
crates/wsio-core/src/types/: mod.rs
crates/wsio-core/src/utils/: task.rs
crates/wsio-server/: CHANGELOG.md  Cargo.toml  README.md
crates/wsio-server/examples/: main.rs  server.rs
crates/wsio-server/src/: builder.rs  config.rs  connection.rs  context.rs  layer.rs  lib.rs  namespace.rs  request.rs  runtime.rs
crates/wsio-server/src/connection/: extensions.rs  mod.rs
crates/wsio-server/src/namespace/: builder.rs  config.rs  mod.rs
crates/wsio-server/src/namespace/operators/: broadcast.rs
crates/wsio-server/src/packet/: mod.rs
crates/wsio-server/src/packet/codecs/: bincode.rs  mod.rs  msgpack.rs  sonic_rs.rs
crates/wsio-server/src/request_adapters/: mod.rs
crates/wsio-server/src/request_adapters/tower/: layer.rs  mod.rs  service.rs
crates/wsio-server/src/service/: mod.rs  request.rs
crates/wsio-server/src/types/: handler.rs  mod.rs  namespace.rs
crates/wsioxide-core/: CHANGELOG.md  Cargo.toml  README.md
crates/wsioxide-core/src/packet/: mod.rs
crates/wsioxide-core/src/packet/codecs/: bincode.rs  mod.rs  msgpack.rs  serde_json.rs  sonic_rs.rs
crates/wsioxide-server/: CHANGELOG.md  Cargo.toml  README.md
crates/wsioxide-server/src/: builder.rs  config.rs  connection.rs  context.rs  layer.rs  lib.rs  runtime.rs
crates/wsioxide-server/src/namespace/: builder.rs  config.rs  mod.rs
crates/wsioxide-server/src/packet/codecs/: serde_json.rs  sonic_rs.rs
crates/wsioxide-server/src/service/: mod.rs  request.rs
crates/wsioxide-server/src/types/: handler.rs
examples/: Cargo.toml  cat-server-memory-usage.sh  client.sh  comprehensive-stress.sh  connection-stress.sh  server.sh  stress-server.sh
examples/.cargo/: config.toml
examples/client/: Cargo.toml  client.rs  connection_stress.rs
examples/server/: Cargo.toml  axum.rs  server.rs  stress.rs
