[package]
name = "wsio-server"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
http = "1.3.1"
http-body = "1.0.1"
tower-layer = "0.3.3"
tower-service = "0.3.3"

[dev-dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }

[features]
all = []
full = ["all"]
