[package]
name = "wsio-server"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
dashmap = "6.1.0"
http = "1.3.1"
http-body = "1.0.1"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
sonic-rs = { version = "0.5.5", optional = true }
tower-layer = "0.3.3"
tower-service = "0.3.3"
url = "2.5.7"

[dev-dependencies]
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = ["packet-codec-serde-json"]

packet-codec-bincode = ["bincode"]
packet-codec-msgpack = ["rmp-serde"]
packet-codec-serde-json = ["serde_json"]
packet-codec-sonic-rs = ["sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-msgpack",
  "packet-codec-serde-json",
  "packet-codec-sonic-rs"
]

full = ["all"]
