[package]
name = "wsio-client"
version = "0.2.0"

authors.workspace = true
description = "client"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
url = "2.5.7"
wsio-core = { path = "../wsio-core", version = "0.2.0" }

[dev-dependencies]
kikiutils = { version = "0.5.6", features = ["signal", "task"] }
tikv-jemallocator = { version = "0.6.1", features = ["background_threads_runtime_support", "background_threads"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[features]
default = []

packet-codec-bincode = ["wsio-core/packet-codec-bincode"]
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs"
]

full = ["all"]
