[package]
name = "wsio-client"
version = "0.2.2"

authors.workspace = true
description = "client"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.7.1"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
num_enum = "0.7.5"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.16"
url = "2.5.7"
wsio-core = { path = "../wsio-core", version = "0.3.1" }

[features]
default = []

packet-codec-bincode = ["wsio-core/packet-codec-bincode"]
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs"
]

full = ["all"]
