[package]
name = "wsio-core"
version = "0.1.1"

authors.workspace = true
description = "core"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_with = "3.15.0"
sonic-rs = { version = "0.5.5", optional = true }

[features]
default = []

packet-codec-bincode = ["dep:bincode"]
packet-codec-msgpack = ["dep:rmp-serde"]
packet-codec-sonic-rs = ["dep:sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs"
]

full = ["all"]
