[package]
name = "wsio-core"
version = "0.4.0"

authors.workspace = true
description = "core"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
ciborium = { version = "0.2.2", optional = true }
parking_lot = "0.12.5"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_repr = "0.1.20"
serde_with = "3.15.1"
sonic-rs = { version = "0.5.5", optional = true }
tokio = { version = "1.48.0", features = ["rt", "sync"] }
tokio-util = "0.7.16"
tungstenite = { version = "0.28.0", default-features = false }

[features]
default = []

packet-codec-bincode = ["dep:bincode"]
packet-codec-cbor = ["dep:ciborium"]
packet-codec-msgpack = ["dep:rmp-serde"]
packet-codec-sonic-rs = ["dep:sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs"
]

full = ["all"]
