[package]
name = "wsio-server"
version = "0.2.1"

authors.workspace = true
description = "server"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bson = "3.0.0"
dashmap = "6.1.0"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.16"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tungstenite = "0.28.0"
wsio-core = { path = "../wsio-core", version = "0.2.0" }
url = "2.5.7"

[dev-dependencies]
axum = "0.8.6"
kikiutils = { version = "0.5.6", features = ["signal", "task"] }
tikv-jemallocator = { version = "0.6.1", features = ["background_threads_runtime_support", "background_threads"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }

[features]
default = []

packet-codec-bincode = ["wsio-core/packet-codec-bincode"]
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs"
]

full = ["all"]
