[package]
name = "wsio-server"
version = "0.3.0"

authors.workspace = true
description = "server"
edition.workspace = true
homepage.workspace = true
include = [
  "Cargo.toml",
  "README.md",
  "src/**/*",
]

license.workspace = true
readme = "./README.md"
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bson = "3.0.0"
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["std"], default-features = false }
http = "1.3.1"
http-body = "1.0.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false }
tokio-util = "0.7.16"
tower-layer = "0.3.3"
tower-service = "0.3.3"
wsio-core = { path = "../wsio-core", version = "0.3.0" }
url = "2.5.7"

[features]
default = []

packet-codec-bincode = ["wsio-core/packet-codec-bincode"]
packet-codec-cbor = ["wsio-core/packet-codec-cbor"]
packet-codec-msgpack = ["wsio-core/packet-codec-msgpack"]
packet-codec-sonic-rs = ["wsio-core/packet-codec-sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-cbor",
  "packet-codec-msgpack",
  "packet-codec-sonic-rs",
]

full = ["all"]
