[package]
name = "wsioxide-core"
version = "0.1.0"

authors.workspace = true
description = "core"
edition.workspace = true
homepage.workspace = true
include = [
  "src/**",
  "Cargo.toml",
  "../../LICENSE*",
  "../../README.md",
]

license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0.1", features = ["serde"], optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", optional = true }
serde_with = "3.15.0"
sonic-rs = { version = "0.5.5", optional = true }

[features]
default = ["packet-codec-serde-json"]

packet-codec-bincode = ["bincode"]
packet-codec-msgpack = ["rmp-serde"]
packet-codec-serde-json = ["serde_json"]
packet-codec-sonic-rs = ["sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-msgpack",
  "packet-codec-serde-json",
  "packet-codec-sonic-rs"
]

full = ["all"]
