[package]
name = "wsioxide-server"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
bson = "3.0.0"
dashmap = "6.1.0"
futures = "0.3.31"
http = "1.3.1"
http-body = "1.0.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = ["tokio"] }
tokio = { version = "1.47.1", features = ["macros"] }
tokio-tungstenite = "0.28.0"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tungstenite = "0.28.0"
wsioxide-core = { path = "../wsioxide-core", version = "0.1.0", optional = true }
url = "2.5.7"

[features]
default = ["packet-codec-serde-json"]

packet-codec-bincode = ["wsioxide-core/packet-codec-bincode"]
packet-codec-msgpack = ["wsioxide-core/packet-codec-msgpack"]
packet-codec-serde-json = ["wsioxide-core/packet-codec-serde-json"]
packet-codec-sonic-rs = ["wsioxide-core/packet-codec-sonic-rs"]

all = [
  "packet-codec-bincode",
  "packet-codec-msgpack",
  "packet-codec-serde-json",
  "packet-codec-sonic-rs"
]

full = ["all"]
