[package]
name = "client"

edition.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
kikiutils = { version = "0.5.6", features = ["signal", "task"] }
tikv-jemallocator = { version = "0.6.1", features = ["background_threads_runtime_support", "background_threads"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
wsio-client = { path = "../../crates/wsio-client", features = ["full"] }

[[bin]]
name = "client"
path = "client.rs"

[[bin]]
name = "connection-stress"
path = "connection_stress.rs"
