[package]
name = "server"

edition.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
kikiutils = { version = "0.5.6", features = ["signal", "task"] }
tikv-jemallocator = { version = "0.6.1", features = ["background_threads_runtime_support", "background_threads"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
wsio-server = { path = "../../crates/wsio-server", features = ["full"] }

[[bin]]
name = "axum"
path = "axum.rs"

[[bin]]
name = "server"
path = "server.rs"
