[package]
name = "server"

edition.workspace = true

# Dependencies
[dependencies]
anyhow.workspace = true
axum.workspace = true
kikiutils.workspace = true
tikv-jemallocator.workspace = true
tokio.workspace = true
tracing.workspace = true
wsio-server.workspace = true

# Binaries
[[bin]]
name = "axum"
path = "axum.rs"

[[bin]]
name = "server"
path = "server.rs"
